crates/zizmor/tests/integration/snapshots/integration__snapshot__forbidden_uses-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 798
expression: "zizmor().config(input_under_test(&format!(\"forbidden-uses/configs/{config}.yml\"))).input(input_under_test(\"forbidden-uses/forbidden-uses-menagerie.yml\")).run()?"
---
error[forbidden-uses]: forbidden action used
  --> @@INPUT@@:13:9
   |
13 |       - uses: actions/setup-python@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of this action is forbidden
   |
   = note: audit confidence → High

2 findings (1 suppressed): 0 informational, 0 low, 0 medium, 1 high
